--- a/ExpediaHotelOffers.Data/ExpediaHotelOffers.Data.vbproj
+++ b/ExpediaHotelOffers.Data/ExpediaHotelOffers.Data.vbproj
@@ -44,6 +44,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
