--- a/ExpediaHotelOffers.Models/ExpediaHotelOffers.Models.vbproj
+++ b/ExpediaHotelOffers.Models/ExpediaHotelOffers.Models.vbproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HotelOffer.vb" />
+    <Compile Include="HotelOffersFilter.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
