--- a/ExpediaHotelOffers.web/Web.config
+++ b/ExpediaHotelOffers.web/Web.config
@@ -33,4 +33,7 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <appSettings>
+    <add key="HotelOffersAPIURL" value='https://offersvc.expedia.com/offers/v2/getOffers?scenario=deal-finder&amp;page=foo&amp;uid=foo&amp;productType=Hotel'/>
+  </appSettings>
 </configuration>
